--- a/login-sigup/frontEnd/package.json
+++ b/login-sigup/frontEnd/package.json
@@ -65,6 +65,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "tailwindcss": "^3.4.1"
   }
 }
